# apophis

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yaml  main.yml  release.yml
apophis/: __init__.py  apophis.py  binance.py  configuration.py  console.py  exchange.py
tests/: test_client.py  test_exchange.py
